--- a/Project III-Group1-Group_Project/Properties/Resources.resx
+++ b/Project III-Group1-Group_Project/Properties/Resources.resx
@@ -118,13 +118,34 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="plane1-Bad-CPdoor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\plane1-Bad-CPdoor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="farrenheit-resized" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\farrenheit-resized.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="plane1-Bad-door4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plane1-Bad-door4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="plane1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\plane1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="farrenheit-resized" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\farrenheit-resized.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="plane11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plane11.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="plane1-Bad-door2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plane1-Bad-door2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="plane1-Bad-CPdoor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plane1-Bad-CPdoor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="plane1-Bad-CPdoor1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plane1-Bad-CPdoor1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="plane1-Bad-door1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plane1-Bad-door1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="plane1-Bad-door3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plane1-Bad-door3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="plan_good" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plan_good.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
