--- a/Project III-Group1-Group_Project/PlaneModule.resx
+++ b/Project III-Group1-Group_Project/PlaneModule.resx
@@ -131,7 +131,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD8
-        kwUAAk1TRnQBSQFMAgEBCgEAASgBBAEoAQQBlgEAAZYBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFY
+        kwUAAk1TRnQBSQFMAgEBCgEAAVgBBAFYAQQBlgEAAZYBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFY
         AQICAAHCAQECAAEBAQABIAUAAcABegEQ/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
         /wD/AFUAAw0BEQNIAYQDXgHNA2EB2QNhAdkDYQHZA2EB2QNfAdADVwGyA0IBcgMUARv/AP8A/wD/AP8A
         /wD/AP8A/wA5AAMGAQgDXQHHAaoBqQGlAf8BqgGpAaUB/wGqAakBpQH/AaoBqQGlAf8BqgGpAaUB/wGq
@@ -6234,7 +6234,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABs
-        RgAAAk1TRnQBSQFMAgEBFAEAAfABAwHwAQMBHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        RgAAAk1TRnQBSQFMAgEBFAEAASABBAEgAQQBHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABeAMAAbQDAAEBAQABCAUAAWABVBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
@@ -6565,10 +6565,13 @@
     <value>17, 57</value>
   </metadata>
   <metadata name="RefuelTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>445, 36</value>
+    <value>1310, 18</value>
   </metadata>
   <metadata name="AutoPilotTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>422, 57</value>
+  </metadata>
+  <metadata name="planeTakingOffTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1144, 18</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>62</value>
