Bunch of UI updates based off feeback during usability testing in class

--- a/Project III-Group1-Group_Project/PlaneModule.resx
+++ b/Project III-Group1-Group_Project/PlaneModule.resx
@@ -131,7 +131,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD8
-        kwUAAk1TRnQBSQFMAgEBCgEAAegBBAHoAQQBlgEAAZYBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFY
+        kwUAAk1TRnQBSQFMAgEBCgEAAaABBQGgAQUBlgEAAZYBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFY
         AQICAAHCAQECAAEBAQABIAUAAcABegEQ/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
         /wD/AFUAAw0BEQNIAYQDXgHNA2EB2QNhAdkDYQHZA2EB2QNfAdADVwGyA0IBcgMUARv/AP8A/wD/AP8A
         /wD/AP8A/wA5AAMGAQgDXQHHAaoBqQGlAf8BqgGpAaUB/wGqAakBpQH/AaoBqQGlAf8BqgGpAaUB/wGq
@@ -6234,7 +6234,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABs
-        RgAAAk1TRnQBSQFMAgEBFAEAAbABBAGwAQQBHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        RgAAAk1TRnQBSQFMAgEBFAEAAWgBBQFoAQUBHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABeAMAAbQDAAEBAQABCAUAAWABVBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
@@ -6573,6 +6573,69 @@
   <metadata name="planeTakingOffTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1144, 18</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsN
+        DhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQUFBQUFBQU
+        FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCAAbAB4DASIAAhEBAxEB/8QA
+        HwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIh
+        MUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVW
+        V1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXG
+        x8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQF
+        BgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAV
+        YnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOE
+        hYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq
+        8vP09fb3+Pn6/9oADAMBAAIRAxEAPwD9UjxXG/Ej4saB8K9MgvddndFuJPKhhgTfJI2MnA9AOpPHI9RX
+        S6pqlvo+n3V7ezrBa28bSyyucKiqCSSfQCviprj/AIae+LV7c6lqsOkeHbCJlgE8oQiPkKFBPLMfmPTA
+        /AVx4is6aUYayex4ObZhLBxjToJOrPZP82fZ3hnxNp/i7Q7PV9LnW5sLuMSRSrxkehHYg5BB6EEVqZr4
+        /wD2c/iFN8LvHl98PNavre4sJrjZaXMUoeJZj0Ct6OCOPXA6mvr1TuGauhWVaF+vU6Msx8cwoc+0lpJd
+        mYnjTwfYeOvDd9oeqCQ2V4oWTyXKMMEMCD6ggH045yK8h/4Yv8Cf8/Gr/wDgSn/xFe+0Vc6NOprNXNsR
+        l+FxclKvTUmu54LbfsbeBLW6hl83VpRG4fY10oDYOcHCg/kQa92jTy1C+gqSinClCnpBWLw2Dw+Dv7CC
+        jfsf/9k=
+</value>
+  </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsN
+        DhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQUFBQUFBQU
+        FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCAAaABsDASIAAhEBAxEB/8QA
+        HwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIh
+        MUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVW
+        V1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXG
+        x8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQF
+        BgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAV
+        YnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOE
+        hYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq
+        8vP09fb3+Pn6/9oADAMBAAIRAxEAPwD9Um6VxPxG+MHhT4TWdrc+KdWXTI7qTy4R5Tys5HJwqKTjHfpX
+        T69rdn4c0e81PUJ1trK1jaWaZzwqgZJr81PFniq1/ag+Lmr6hrviW08KaDa20q6b/aM6xhQAREACcbmb
+        DNjtxnoRw4rEOgko6yex9hw7kSzirOpiG40KavJpXfkktdWfpfpOqWutadb31lOlzaXCLLFNGcq6kZBH
+        4Vbr4m/Yb+Ov2O6m+Geu3iyGJmbSbnzA8bYJ3QhvT+JexGenGftgYrXD1o16amjy86ymtk2NnhKvTVPu
+        nszL8UeGdN8YaDe6Pq9st5pt5GYp4GJAZT2yDkfUV48P2Jvg/wD9CxL/AODK6/8Ajle70VpOlTqO84pn
+        JhcxxmCTjha0oJ78ra/I8d8J/sn/AAw8E+IbPWtJ8NmHUbN/MglkvJ5QjdjtZyMj6V6+FGOOKd3oHSqh
+        TjTVoKyMcVjMRjZKeJqOb7tt/mf/2Q==
+</value>
+  </data>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsN
+        DhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQUFBQUFBQU
+        FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCAAZACEDASIAAhEBAxEB/8QA
+        HwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIh
+        MUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVW
+        V1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXG
+        x8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQF
+        BgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAV
+        YnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOE
+        hYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq
+        8vP09fb3+Pn6/9oADAMBAAIRAxEAPwD9U65j4kfErw38I/BeqeLPF2qRaL4e0xBJdXsqs4QFgqgKoLMS
+        zKAqgkkgAV0xYDqa/Hr9vj9oqw/au/aN0D4LaV4rsfDfw90XU/J1PXtSu47eye6QN50xdmClYlDomT8z
+        lgv3gSAfqx8Lviv4V+NHgyx8V+DNYi1zQLwsIbuKN48lWKspR1VlIIwQwBrrq/Gz9jH4/aT+xf8AtReI
+        PhdJ4wsvFfwr8QXyJa61pt5HdW0MzACC53ISoJUrHLjn5VJHyAV+yKSLIoZWDAjIIOQR60AOooooAQjN
+        fK+of8Ev/wBmzUtQubyX4esk1xK0rrDrN9GgZiSdqLMAoyeAAAO1fVNFAHyjb/8ABLn9mq1uIpk+Hsjt
+        G4cLJrV+6nBzgqZ8Eex4r6pt7WK1hjiiQJHGoRFHQADAH5VLRQAUUUUAf//Z
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>62</value>
   </metadata>
